[gd_scene load_steps=6 format=3 uid="uid://dw37ns72pp1wt"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_4rqus"]
[ext_resource type="AudioStream" uid="uid://dw0otf8cb2ein" path="res://Audio/boing_2.mp3" id="2_lm8em"]
[ext_resource type="ArrayMesh" uid="uid://b32eho7vb76qp" path="res://Models/stickman.obj" id="3_ju1by"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fawvn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hyi7o"]

[node name="RigidBody3D" type="RigidBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.00379753, 0, -0.623472)
can_sleep = false
lock_rotation = true
script = ExtResource("1_4rqus")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fawvn")

[node name="RayCast1" type="RayCast3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, -0.226332, 0)

[node name="RayCast2" type="RayCast3D" parent="."]
transform = Transform3D(0.999803, 0.0198605, 0, -0.0198605, 0.999803, 0, 0, 0, 1, -0.133907, -0.296059, 0)

[node name="RayCast3" type="RayCast3D" parent="."]
transform = Transform3D(0.997701, 0.0677715, 0, -0.0677715, 0.997701, 0, 0, 0, 1, -0.262451, -0.23319, 0)

[node name="RayCast4" type="RayCast3D" parent="."]
transform = Transform3D(0.998901, -0.0468624, 0, 0.0468624, 0.998901, 0, 0, 0, 1, 0.118535, -0.255001, 0)

[node name="RayCast5" type="RayCast3D" parent="."]
transform = Transform3D(0.995107, -0.0987987, 0, 0.0987987, 0.995107, 0, 0, 0, 1, 0.158315, -0.274905, -2.56114e-09)

[node name="RayCast6" type="RayCast3D" parent="."]
transform = Transform3D(0.993707, 0.112007, 0, -0.112007, 0.993707, 0, 0, 0, 1, 0.0637898, -0.19098, -0.229479)

[node name="RayCast7" type="RayCast3D" parent="."]
transform = Transform3D(0.993957, -0.109769, 0, 0.109769, 0.993957, 0, 0, 0, 1, -0.212627, -0.217195, 0.149318)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_hyi7o")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_lm8em")
volume_db = -6.667

[node name="Stickman" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.86404e-08, 0, -0.820865, 0, 0.45953, 0, 0.426442, 0, -3.58811e-08, -1.24099, 0.502577, 1.29451)
mesh = ExtResource("3_ju1by")

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
